--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Manrope&display=swap');
+
 * {
 	box-sizing: border-box;
 }
 body {
+	font-family: 'Manrope', 'DM Serif Display', sans-serif;
 	padding:0;
 	margin:0;
 }
@@ -30,7 +34,7 @@ body {
 	box-shadow: 1px 1px 1px rgba(0,0,0,.3);
 }
 .btn-exp{
-	background-color: cadetblue;
+	background-color: #5bc0de;
 	color: #fff;
 }
 .btn-exp:hover{
@@ -39,11 +43,11 @@ body {
 
 }
 .btn-free{
-	border: 2px solid cadetblue;
-	color: cadetblue;
+	border: 2px solid #5bc0de;
+	color: #5bc0de;
 }
 .btn-free:hover{
-	background-color: cadetblue;
+	background-color: #5bc0de;
 	color: #fff;
 	box-shadow: 1px 2px 3px rgba(0,0,0,.3);
 
@@ -53,7 +57,7 @@ body {
 	transform: translateY(-3px);
 }
 
-/* second section styles */
+/* second section(brands) styles */
 .brands{
 	padding: auto 20px;
 	margin: 50px auto;
@@ -65,6 +69,63 @@ body {
 }
 
 
+/* Third section what-we-do */
+.what-we-do{
+	margin: 100px auto;
+}
+
+.individual-card{
+	padding:40px 20px;
+}
+.title-sec{
+	font-weight: bold;
+	margin: 12px auto;
+}
+.more-info{
+	line-height: 2;
+	color: #666;
+}
+.individual-card .icon{
+	width: 50px;
+	height: 50px;
+	background-color: #5bc0de;
+	border-radius: 50%;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin:20px auto;
+}
+.individual-card .icon i{
+	color: #fff;
+	transform: scale(1.5);
+}
+.learn-more{
+	position: relative;
+	display: inline;
+}
+.learn-more::before{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0;
+	background-color: #5bc0de;
+	opacity: 0;
+	width: 0;
+	transition: all .5s ease-in-out;
+}
+.learn-more:hover.learn-more::before{
+	opacity: 1;
+	width: 100%;
+}
+.learn-more a{
+	text-decoration: none;
+	color: #5bc0de;
+}
+.learn-more i{
+	transform: translateY(1.5px);
+}
 
 
 
