--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,40 @@ body {
 }
 
 
+/* Section 4(how it works) */
+.step-outer{
+	display: flex;
+	
+}
+.step-outer .nums{
+	background-color: #5bc0de;
+	width: 35px;
+	height: 35px;
+	color: white;
+	display: flex;
+	font-size: 14px;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+	border-radius: 50%;
+	margin-right: 15px;
+}
+.section-4-illus{
+	width:160px;
+	overflow: hidden;
+	height: 160px;
+	border-radius: 50%;
+	transform: rotate(315deg);
+}
+.section-4-illus .bar-15{
+	width: 100%;
+	height: 0.5px;
+	background-color: red;
+	margin: 8px auto;
+}
+.second-sec-img{
+	left: 60px;
+}
 
 @media(max-width:768px){
 	.sec-1-img{
@@ -138,6 +172,13 @@ body {
 	.first-sec-img{
 		top: 0;
 		margin: 20px auto;
+		left: 0;
+	}
+	.section-4-illus{
+		width: 0;
+		display: none;
+	}
+	.second-sec-img{
 		left: 0;
 	}
 	.brands{
