added demo folder

--- a/header.css
+++ b/header.css
@@ -32,6 +32,9 @@
     color:#3f78e0!important;
 }
 
+.addcolor{
+    color:#3f78e0!important;
+}
 .dropdown-menu {
     min-width: 200px;
     margin-top:10px;
