--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,8 @@ body {
 	object-fit: cover;
 	margin: 1.6666666667%;
 	border-radius: 12px;
+	position: relative;
+	cursor: pointer;
 }
 
 .project-carousel {
@@ -211,6 +213,16 @@ body {
 	transform: translateX(0);
 	transition: transform 0.5s ease-in-out;
 }
+#imgs img::before{
+	content: '';
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	background-color: #ccc;
+	bottom: 50px;
+	right: 50px;
+}
 .dots-img{
 	display: flex;
 	justify-content: center;
@@ -227,7 +239,55 @@ body {
 	background-color: #666;
 }
 
+/* 6th sections */
+.outer-cont{
+	display: flex;
+	justify-content: space-between;
+	font-size: 14px;
+}
+.about-img{
+	position: relative;
+}
+.play-btn{
+	background-color: #5bc0de;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	color: #fff;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.play-btn::after{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	border-radius: 50%;
+	z-index: -100;
+	background-color: #5bc0de;
+	animation: glow 2s infinite ease-in both;
+}
 
+@keyframes glow {
+	0%{
+		transform: scale(1)
+	}
+	50%{
+		opacity: .4;
+		transform: scale(1.3);
+	}
+	100%{
+		opacity: .2;
+		transform: scale(1.4);
+	}
+}
 
 @media(max-width:768px){
 	.width-50{
