--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,207 @@ body {
 	padding:0;
 	margin:0;
 }
+.topmost{
+	color:#fff;
+	font-weight:500;
+	padding-left: 100px;
+	padding-right: 100px;
+}
+.topmost>span{
+	display: inline-flex;
+	list-style-type: none;
+}
+.topmost>span>li{
+	padding-left: 20px;
+}
+
+.main-nav{
+	padding-left: 100px;
+	padding-right: 100px;
+	width: 100%;
+}
+
+.navbar .dropdown-toggle::after{
+	color:#3f78e0;
+}
+
+.nav-item .dropdown-toggle{
+	color:#383c54;
+	font-weight:bold;
+}
+
+.dropdown-item:hover{
+	background:none;
+	color:#3f78e0!important;
+}
+
+.addcolor{
+	color:#3f78e0!important;
+}
+.dropdown-menu {
+	min-width: 200px;
+	margin-top:10px;
+}
+
+.nav-link:hover{
+	color:#3f78e0!important;
+}
+
+.dropdown-item:active{
+	background:none;
+	color:#3f78e0!important;
+}
+
+.contact-btn{
+	border-radius:20px;
+	font-weight: bold;
+}
+
+.dropdown-item{
+	font-weight: 500!important;
+}
+
+.multilevel-dropdown-menu-1{
+	position: absolute; 
+	transform: translate3d(205px, 0px, 0px); 
+	top: 0px; 
+	left: 0px; 
+	will-change: transform;
+}
+
+.multilevel-dropdown-menu-2{
+	position: absolute; 
+	transform: translate3d(205px, 37px, 0px); 
+	top: 0px; 
+	left: 0px; 
+	will-change: transform;
+}
+.multilevel-dropdown-menu-3{
+	position: absolute; 
+	transform: translate3d(205px, 75px, 0px); 
+	top: 0px; 
+	left: 0px; 
+	will-change: transform;
+}
+.multilevel-dropdown-menu-4{
+	position: absolute; 
+	transform: translate3d(205px, 105px, 0px); 
+	top: 0px; 
+	left: 0px; 
+	will-change: transform;
+}
+.multilevel-dropdown-menu-5{
+	position: absolute; 
+	transform: translate3d(205px, 145px, 0px); 
+	top: 0px; 
+	left: 0px; 
+	will-change: transform;
+}
+
+.multilevel{
+	font-weight: 500!important;
+}
+
+/***********************************
+DOCUMENTATION NAVBAR
+************************************/
+.documentation_row{
+
+
+}
+
+.multi-column{
+left: 180% !important;
+right: auto !important;
+text-align: left !important;
+transform: translate(-86%, 0) !important;
+width:1175px;
+margin-top:10px;
+}
+
+.header-mc{
+	color:#3f78e0!important;
+	font-weight:bold;
+}
+
+.multi-column a{
+	text-decoration: none;
+	font-weight:bold!important;
+	background:none!important;
+	color:#383c54!important;
+
+}
+
+
+.dropdown-menu.columns-5 {
+	min-width: 1100px
+}
+.dropdown-menu li a {
+	padding: 5px 0px;
+	font-weight: 300;
+}
+.multi-column-dropdown {
+	list-style: none;
+}
+.multi-column-dropdown li a {
+	display: block;
+	clear: both;
+	line-height: 1.428571429;
+	color: #333;
+	white-space: normal;
+}
+.multi-column-dropdown li a:hover {
+	text-decoration: none;
+	color: #262626;
+	background-color: #f5f5f5;
+}
+
+@media (max-width: 767px) {
+	.dropdown-menu.multi-column {
+			min-width: 240px !important;
+			overflow-x: hidden;
+	}
+}
+
+/***********************
+DEMO
+**********************/
+.multi-column-demo{
+	left: 180% !important;
+	right: auto !important;
+	text-align: left !important;
+	transform: translate(-35%, 0) !important;
+	width:1175px;
+	margin-top:10px;
+	background-color: #405979;
+}
+
+.multi-column-img-dropdown{
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+	width:175px;
+	height:125px;
+	background-size:cover;
+	border-radius:10px;
+	margin-bottom:10px;
+}
+
+.translateImage{
+	cursor:pointer;
+	transform:translateY(-5%)
+}
+
+.row1{
+	margin-top:30px;
+	margin-left:20px;
+	margin-right:10px;
+}
+
+.row1>.col-sm-2{
+	margin:-2px;
+}
+
+
+
 .first-sec-img{
 	position: relative;
 	top: -100px;
@@ -34,7 +235,7 @@ body {
 	box-shadow: 1px 1px 1px rgba(0,0,0,.3);
 }
 .btn-exp{
-	background-color: #5bc0de;
+	background-color: #3f78e0;
 	color: #fff;
 }
 .btn-exp:hover{
@@ -43,11 +244,11 @@ body {
 
 }
 .btn-free{
-	border: 2px solid #5bc0de;
-	color: #5bc0de;
+	border: 2px solid #3f78e0;
+	color: #3f78e0;
 }
 .btn-free:hover{
-	background-color: #5bc0de;
+	background-color: #3f78e0;
 	color: #fff;
 	box-shadow: 1px 2px 3px rgba(0,0,0,.3);
 
@@ -91,7 +292,7 @@ body {
 .individual-card .icon{
 	width: 50px;
 	height: 50px;
-	background-color: #5bc0de;
+	background-color: #3f78e0;
 	border-radius: 50%;
 	margin: auto;
 	display: flex;
@@ -113,7 +314,7 @@ body {
 	width: 100%;
 	height: 2px;
 	bottom: 0;
-	background-color: #5bc0de;
+	background-color: #3f78e0;
 	opacity: 0;
 	width: 0;
 	transition: all .5s ease-in-out;
@@ -124,7 +325,7 @@ body {
 }
 .learn-more a{
 	text-decoration: none;
-	color: #5bc0de;
+	color: #3f78e0;
 }
 .learn-more i{
 	transform: translateY(1.5px);
@@ -137,7 +338,7 @@ body {
 	
 }
 .step-outer .nums{
-	background-color: #5bc0de;
+	background-color: #3f78e0;
 	width: 35px;
 	height: 35px;
 	color: white;
@@ -249,7 +450,7 @@ body {
 	position: relative;
 }
 .play-btn{
-	background-color: #5bc0de;
+	background-color: #3f78e0;
 	width: 60px;
 	height: 60px;
 	border-radius: 50%;
@@ -271,8 +472,30 @@ body {
 	right: 0;
 	border-radius: 50%;
 	z-index: -100;
-	background-color: #5bc0de;
+	background-color: #3f78e0;
 	animation: glow 2s infinite ease-in both;
+}
+
+
+/* 7th section */
+/* .team-carousel{
+	width: 100%;
+	position: relative;
+} */
+#cards{
+	/* width: 100%; */
+	overflow: hidden;
+	display: flex;
+	margin: auto;
+}
+#cards .indi-card{
+	min-width: 30%;
+	width: 30%;
+	object-fit: cover;
+	margin: 1.6666666667%;
+	border-radius: 12px;
+	position: relative;
+	cursor: pointer;
 }
 
 @keyframes glow {
