--- a/styles.css
+++ b/styles.css
@@ -441,6 +441,9 @@ DEMO
 }
 
 /* 6th sections */
+.video-eff{
+	padding: 15px 60px;
+}
 .outer-cont{
 	display: flex;
 	justify-content: space-between;
@@ -498,6 +501,22 @@ DEMO
 	cursor: pointer;
 }
 
+/* footer */
+.social{
+	display: flex;
+}
+.social a{
+	position: relative;
+	text-decoration: none;
+	margin-right: 10px;
+}
+.social a i{
+transition: all .2s ease-in-out;
+}
+.social a i:hover{
+	transform: translateY(-4px);
+}
+
 @keyframes glow {
 	0%{
 		transform: scale(1)
@@ -549,6 +568,24 @@ DEMO
 		object-fit: cover;
 		margin: 25px;
 		border-radius: 12px;
+	}
+	.video-eff{
+		padding:10px;
+		margin:25px 8px;
+	}
+	.chuppa{
+		display: none;
+		width: 0;
+	}
+	.reviews-bg{
+		padding: 10px;
+		background-color: rgb(227, 242, 247);
+	}
+	.button-sec{
+		margin: auto;
+	}
+	.footer{
+		margin: auto 15px;
 	}
 }
 @media (max-width: 520px){
