--- a/styles.css
+++ b/styles.css
@@ -391,7 +391,7 @@ DEMO
 
 /* 5th section carousel */
 
-#imgs img {
+#imgs .img-cont-car {
 	min-width: 30%;
 	width: 30%;
 	height: 300px;
@@ -400,8 +400,35 @@ DEMO
 	border-radius: 12px;
 	position: relative;
 	cursor: pointer;
+	overflow: hidden;
 }
-
+#imgs img{
+	width: 100%;
+	height: 100%;
+}
+.link{
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	background-color: lightgray;
+	border-radius: 50%;	
+	right: -50px;
+	bottom: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: 200;
+	opacity: 0;
+	color: #555;
+	transition: all .5s ease;
+}
+.img-cont-car:hover .link{
+	opacity: 1;
+	right: 15px;
+}
+.link:hover{
+	background-color: #fff;
+}
 .project-carousel {
 	width: 100%;
 	margin: auto;
@@ -415,11 +442,18 @@ DEMO
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	background-color: #fff;
+	background-color: #eaeaea;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+	transition: all .4s ease;
+	opacity: .8;
+}
+.btn-left:hover,
+.btn-right:hover{
+	opacity: 1;
+	background-color: white;
 }
 .btn-left{
 	left: 30px;
@@ -580,7 +614,7 @@ transition: all .2s ease-in-out;
 	.how-it-first-col{
 		padding:20px;
 	}
-	#imgs img {
+	#imgs .img-cont-car{
 		width: 450px;
 		min-width: 450px;
 		height: 300px;
@@ -606,12 +640,18 @@ transition: all .2s ease-in-out;
 	.footer{
 		margin: auto 15px;
 	}
+	.btn-left{
+		left: 10px;
+	}
+	.btn-right{
+		right: 10px;
+	}
 }
 @media (max-width: 520px){
 .project-carousel {
 	width: 90%;
 }
-	#imgs img {
+	#imgs .img-cont-car{
 		width: 100%;
 		min-width: 100%;
 		height: 250px;
