--- a/styles.css
+++ b/styles.css
@@ -9,209 +9,391 @@ body {
 	padding:0;
 	margin:0;
 }
+
+/***********************
+HEADER START
+************************/
+
 .topmost{
-	color:#fff;
-	font-weight:500;
-	padding-left: 100px;
-	padding-right: 100px;
+    color:#fff;
+    font-weight:500;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 .topmost>span{
-	display: inline-flex;
-	list-style-type: none;
+    display: inline-flex;
+    list-style-type: none;
 }
 .topmost>span>li{
-	padding-left: 20px;
+    padding-left: 20px;
 }
 
+@media (max-width: 767px) {
+    .topmost>span{
+        display:block;
+        
+    }
+    .topmost{
+        float: left;
+        padding-left: 20px;
+        padding-right: 20px;
+        display:block;
+        width:100%;
+    }
+    .topmost>span>li{
+        padding-left: 0px;
+    }
+    
+}
+
+
 .main-nav{
-	padding-left: 100px;
-	padding-right: 100px;
-	width: 100%;
-	transition: all .5s ease;
+    padding-left: 100px;
+    padding-right: 100px;
+    width: 100%;
 }
-.main-nav.fixed{
-	position: fixed;
-	top: 0;
-	z-index: 1000;
-}
+
 .navbar .dropdown-toggle::after{
-	color:#3f78e0;
+    color:#3f78e0;
 }
 
 .nav-item .dropdown-toggle{
-	color:#383c54;
-	font-weight:bold;
+    color:#383c54;
+    font-weight:bold;
 }
 
 .dropdown-item:hover{
-	background:none;
-	color:#3f78e0!important;
+    background:none;
+    color:#3f78e0!important;
 }
 
 .addcolor{
-	color:#3f78e0!important;
+    color:#3f78e0!important;
 }
 .dropdown-menu {
-	min-width: 200px;
-	margin-top:10px;
+    min-width: 200px;
+    margin-top:10px;
 }
 
 .nav-link:hover{
-	color:#3f78e0!important;
+    color:#3f78e0!important;
 }
 
 .dropdown-item:active{
-	background:none;
-	color:#3f78e0!important;
+    background:none;
+    color:#3f78e0!important;
 }
 
 .contact-btn{
-	border-radius:20px;
-	font-weight: bold;
+    border-radius:20px;
+    font-weight: bold;
 }
 
 .dropdown-item{
-	font-weight: 500!important;
+    font-weight: 600!important;
 }
 
 .multilevel-dropdown-menu-1{
-	position: absolute; 
-	transform: translate3d(205px, 0px, 0px); 
-	top: 0px; 
-	left: 0px; 
-	will-change: transform;
+    position: absolute; 
+    transform: translate3d(205px, 0px, 0px); 
+    top: 0px; 
+    left: 0px; 
+    will-change: transform;
 }
 
 .multilevel-dropdown-menu-2{
-	position: absolute; 
-	transform: translate3d(205px, 37px, 0px); 
-	top: 0px; 
-	left: 0px; 
-	will-change: transform;
+    position: absolute; 
+    transform: translate3d(205px, 37px, 0px); 
+    top: 0px; 
+    left: 0px; 
+    will-change: transform;
 }
 .multilevel-dropdown-menu-3{
-	position: absolute; 
-	transform: translate3d(205px, 75px, 0px); 
-	top: 0px; 
-	left: 0px; 
-	will-change: transform;
+    position: absolute; 
+    transform: translate3d(205px, 75px, 0px); 
+    top: 0px; 
+    left: 0px; 
+    will-change: transform;
 }
 .multilevel-dropdown-menu-4{
-	position: absolute; 
-	transform: translate3d(205px, 105px, 0px); 
-	top: 0px; 
-	left: 0px; 
-	will-change: transform;
+    position: absolute; 
+    transform: translate3d(205px, 105px, 0px); 
+    top: 0px; 
+    left: 0px; 
+    will-change: transform;
 }
 .multilevel-dropdown-menu-5{
-	position: absolute; 
-	transform: translate3d(205px, 145px, 0px); 
-	top: 0px; 
-	left: 0px; 
-	will-change: transform;
+    position: absolute; 
+    transform: translate3d(205px, 136px, 0px); 
+    top: 0px; 
+    left: 0px; 
+    will-change: transform;
 }
 
 .multilevel{
-	font-weight: 500!important;
+    font-weight: 600!important;
 }
 
+#collapse-btn:focus{
+    box-shadow: none;
+}
+
+.navbar-toggler span {
+    display: block !important;
+    background-color: #383c54 !important;
+    height: 4px !important;
+    width: 27px !important;
+    margin-top: 5px !important;
+    margin-bottom: 5px !important;
+    transform: rotate(0deg) !important;
+    left: 0 !important;
+    opacity: 1 !important;
+  }
+
+  .navbar-toggler span:nth-child(1),
+    .navbar-toggler span:nth-child(3) {
+    transition: transform 0.35s ease-in-out !important;
+    transition: transform 0.35s ease-in-out !important;
+    }
+
+    .navbar-toggler:not(.collapsed) span:nth-child(1) {
+        position: absolute !important;
+        left: 90% !important;
+        top: 35px !important;
+        transform: rotate(135deg) !important;
+        opacity: 0.9 !important;
+        background-color: #222!important;
+        }
+        
+        .navbar-toggler:not(.collapsed) span:nth-child(2) {
+        height: 12px !important;
+        visibility: hidden !important;
+        background-color: transparent !important;
+        }
+        
+        .navbar-toggler:not(.collapsed) span:nth-child(3) {
+        position: absolute !important;
+        left: 90% !important;
+        top: 35px !important;
+        transform: rotate(-135deg) !important;
+        opacity: 0.9 !important;
+        background-color: #222!important;
+        }
+
+@media (max-width: 767px ){
+    .contact-btn{
+        display: none;
+    }
+    #collapse-btn{
+        float:right;
+        border: none;
+    }   
+    .main-nav{
+        padding-left: 20px;
+        padding-right: 20px;
+        width: 100%;
+    }
+    #language{
+        margin-left:auto;
+        font-size: 25px;
+    }
+
+}
 /***********************************
 DOCUMENTATION NAVBAR
 ************************************/
-.documentation_row{
-
-
-}
 
 .multi-column{
-left: 180% !important;
-right: auto !important;
-text-align: left !important;
-transform: translate(-86%, 0) !important;
-width:1175px;
-margin-top:10px;
+  left: 180% !important;
+  right: auto !important;
+  text-align: left !important;
+  transform: translate(-89%, 0) !important;
+  width:1175px;
+  margin-top:10px;
 }
 
 .header-mc{
-	color:#3f78e0!important;
-	font-weight:bold;
+    color:#3f78e0!important;
+    font-weight:bold;
 }
 
 .multi-column a{
-	text-decoration: none;
-	font-weight:bold!important;
-	background:none!important;
-	color:#383c54!important;
+    text-decoration: none;
+    font-weight:600!important;
+    background:none!important;
+    color:#383c54!important;
 
 }
 
 
 .dropdown-menu.columns-5 {
-	min-width: 1100px
+    min-width: 1100px
 }
 .dropdown-menu li a {
-	padding: 5px 0px;
-	font-weight: 300;
+    padding: 5px 0px;
+    font-weight: 300;
 }
 .multi-column-dropdown {
-	list-style: none;
+    list-style: none;
 }
 .multi-column-dropdown li a {
-	display: block;
-	clear: both;
-	line-height: 1.428571429;
-	color: #333;
-	white-space: normal;
+    display: block;
+    clear: both;
+    line-height: 1.428571429;
+    color: #333;
+    white-space: normal;
 }
 .multi-column-dropdown li a:hover {
-	text-decoration: none;
-	color: #262626;
-	background-color: #f5f5f5;
+    text-decoration: none;
+    color: #262626;
+    background-color: #f5f5f5;
 }
-
+ 
 @media (max-width: 767px) {
-	.dropdown-menu.multi-column {
-			min-width: 240px !important;
-			overflow-x: hidden;
-	}
+    .dropdown-menu.multi-column {
+        min-width: 240px !important;
+        overflow-x: hidden;
+    }
 }
 
 /***********************
 DEMO
 **********************/
 .multi-column-demo{
-	left: 180% !important;
-	right: auto !important;
-	text-align: left !important;
-	transform: translate(-35%, 0) !important;
-	width:1175px;
-	margin-top:10px;
-	background-color: #405979;
-}
+    left: 180% !important;
+    right: auto !important;
+    text-align: left !important;
+    transform: translate(-37.5%, 0) !important;
+    width:1175px;
+    margin-top:10px;
+    background-color: #405979;
+  }
 
 .multi-column-img-dropdown{
-	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-	width:175px;
-	height:125px;
-	background-size:cover;
-	border-radius:10px;
-	margin-bottom:10px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    width:175px;
+    height:125px;
+    background-size:cover;
+    border-radius:10px;
+    margin-bottom:10px;
 }
 
 .translateImage{
-	cursor:pointer;
-	transform:translateY(-5%)
+    cursor:pointer;
+    transform:translateY(-5%)
 }
 
 .row1{
-	margin-top:30px;
-	margin-left:20px;
-	margin-right:10px;
+    margin-top:30px;
+    margin-left:20px;
+    margin-right:10px;
 }
 
 .row1>.col-sm-2{
-	margin:-2px;
+    margin:-2px;
 }
+
+
+/* .multi-column-img-dropdown img{
+    border:1px solid #fff;
+    height: cover;
+    width: cover;
+} */
+
+/***********************
+BLOCK
+**********************/
+.multi-column-block-dropdown{
+    width:175px;
+    height:125px;
+    margin-top:20px;
+    cursor:pointer;
+    border-radius:7px;
+    position: relative;
+    /* background:#4d4d4d; */
+    background:rgb(255, 255, 255,0.1);
+    
+}
+
+.multi-column-block-dropdown:hover{
+    background-color: rgb(255, 255, 255,0.3);
+}
+
+.multi-column-block{
+    left: -205% !important;
+    right: auto !important;
+    text-align: left !important;
+    transform: translate(-38%, 0) !important;
+    width:1175px;
+    margin-top:10px;
+    background-color: #425978;
+    color:#fff;
+    font-weight: bold;
+  }
+
+
+  /*******************
+  RESPONSIVE SIDE BAR
+  ********************/
+
+
+#column_left {
+	background-color: #1e202e!important;
+    display:block;
+    position:absolute;
+    width:85%;
+    height:100%;
+    z-index: 1;
+    overflow-y:auto;
+}
+
+.nav-list li a {
+	text-decoration: none;
+	padding: 10px;
+	cursor: pointer;
+    display: block;
+    font-size: 22px!important;
+    font-weight:400;
+}
+
+.nav-list > li > a {
+	color: #fff;
+	font-size: 14px;
+	padding-left: 13px !important;
+    margin-left:20px;
+    
+}
+
+.nav-list > li{
+    max-width:420px;
+    min-width:420px;
+}
+
+.nav-list > li > a:hover {
+	background-color: #444444;
+    background:none;
+}
+
+.fa-times-thin:before {
+	content: '\00d7';
+    color:white;
+}
+
+.header-sidebar{
+    color:#fff!important;
+    margin:20px!important;
+}
+.one-down{
+    margin-left:60px!important;
+}
+.two-down{
+    margin-left:100px!important;
+}
+
+
+/***********************
+HEADER END
+************************/
 
 
 
